2005-02-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in:
	  - fixed typo. (scim=$enable_m17nlib)
	  - added -DSCIM_1_2_0. (beginning of #ifdef hell)

2005-02-24 Seiichi SATO <ssato@sh.rim.or.jp>

	supported IIIMF X aux object.
	* inputmethod/iiimf/aux.c:
	  new file (heavily based on iiimpAux.c of IIIMXCF)
	* inputmethod/iiimf/keymap.c:
	  - renamed from im_iiimf_keymap.h.
	  - fixed wrong mappings. ("%", "|", "~". "`", "?")
	* inputmethod/iiimf/LICENCE: new file
	* inputmethod/iiimf/keymap.h: new file
	* inputmethod/iiimf/im_iiimf.c:
	 - code cleanup.
	 - check for HTT_DISABLE_STATUS_WINDOW environment variable.
	 - removed IM_IIIMF_ATOKX_HACK.

	Note: In the next release, IIIMF plugin will be distributed under MIT/X
	      license. See inputmethod/iiimf/LICENCE for more detail.

2005-02-23 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_screen.c: reprt meta while mouse tracking mode.
	* mlterm/ml_screen.h: modified definitions for back scroll mode.
	* mlterm/ml_vt100_parser.c: fixed typo.

2005-02-22 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im.c (x_im_new): return NULL when input_method is "none".

2005-02-22 MINAMI Hirokazu <minami@mistfall.net>

	* x_term_manager.c: mlterm daemon can be killed by 
	"mlclient --kill".
	* tool/mlclient/main.c: _K/--maxpts optios was removed long ago...
	* mlterm/ml_vt100_parser.c: try to mimic term's extended 
	escape sequences(1047/1048/1049).

2005-02-21 MINAMI Hirokazu <minami@mistfall.net>

	made a window icon to belong a pty not a window.
	* xwindow/x_screen.c: added change_icon() and
	  set/reset an icon when a term is attache/dettached.
	* xwindow/x_term_manager.c: handle term->icon_path.
	* xwindow/x_window_manager.c: added x_window_manager_set_icon.
	* xwindow/xwindow.c: added x_window_remove_icon() and
	  x_window_set_icon_from_file.
	* doc/en/PROTOCOL: updated.

2005-02-19 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/im_common.h (im_convert_encoding): initialized converter
	before conversion.
